# stdout-context

./: .gitignore  .python-version  CHANGELOG.md  README.md  pyproject.toml  tox.ini
.github/workflows/: check.yml
src/karpyncho/stdout_context/: __init__.py
src/tests/: test_init.py
