[build-system]
requires = ["wheel", "setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "karpyncho-stdout-context"
version = "0.1.2"
authors = [
    {name = "Sebastian Quiles", email = "qsebas@gmail.com"},
]
description = "Stdout Context to use in unittest."
readme = "README.md"
requires-python = ">=3.5"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
]

[project.urls]
homepage = "https://github.com/karpyncho/stdout-context"
# documentation = "https://readthedocs.org"
repository = "https://github.com/karpyncho/stdout-context"
changelog = "https://github.com/karpyncho/stdout-context/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "tox",
    "build",
    "flake8",
    "flake8-import-order",
    "pep8-naming",
    "flake8-colors",
    "pylint",
    "bandit",
    "pytest",
    "coverage",
    "pytest-cov",
]
